Some more organization and comments

--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
   "license": "none",
   "private": false,
   "devDependencies": {
+    "@types/js-yaml": "^4.0.5",
     "@types/node": "^20.4.2",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6"
   },
   "dependencies": {
+    "js-yaml": "^4.1.0",
     "rxjs": "^7.8.1",
     "winston": "^3.10.0"
   }
