--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.ts",
   "repository": "https://github.com/zzm634/iracing-telemetry-node",
   "author": "Zach Miller",
-  "license": "none",
+  "license": "none yet",
   "private": false,
   "devDependencies": {
     "@types/js-yaml": "^4.0.5",
