--- a/package.json
+++ b/package.json
@@ -8,13 +8,16 @@
   "license": "none yet",
   "private": false,
   "devDependencies": {
+    "@types/ffi-napi": "^4.0.7",
     "@types/js-yaml": "^4.0.5",
     "@types/node": "^20.4.2",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6"
   },
   "dependencies": {
+    "ffi-napi": "^4.0.3",
     "js-yaml": "^4.1.0",
+    "ref-wchar-napi": "^1.0.3",
     "rxjs": "^7.8.1",
     "winston": "^3.10.0"
   }
